Page is now the correct height and if possible the footer is visible.

--- a/ControlAVP/wwwroot/css/site.css
+++ b/ControlAVP/wwwroot/css/site.css
@@ -48,7 +48,7 @@ body {
     margin-bottom: 60px;
     
     /* Drops the height of body so that navbar fixed-top doesn't block content*/
-    min-height: 75rem;
+    /*min-height: 75rem;*/
     padding-top: 4.5rem;
 }
 
@@ -58,8 +58,8 @@ body {
     width: 100%;
     white-space: nowrap;
     /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    /*height: 60px;*/
+    line-height: 50px; /* Vertically center the text there */
 }
 
 .nav-item {
